[cards]-[fix]: flex alignment
- fixed issue caused by removing a property from %flex placeholder

--- a/src/app/cards/cards.component.scss
+++ b/src/app/cards/cards.component.scss
@@ -9,3 +9,7 @@ margin: 0 20px 20px 0;
 .bg-dark {
   background-color: #333;
 }
+
+.cards-container {
+	align-items: flex-start;
+}
